learn flex wrap

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .father {
   display: flex;
-  /* Main Axis */
+  flex-wrap: wrap-reverse;
+  align-content: space-around;
   justify-content: space-around;
   height: 100vh;
 }
@@ -11,18 +12,7 @@
   background: peru;
   color: aliceblue;
   font-size: 50px;
-}
-
-.child:nth-child(1) {
-  order: 2;
-  align-self: flex-end;
-}
-
-.child:nth-child(2) {
-  order: 1;
-  align-self: center;
-}
-
-.child:nth-child(3) {
-  order: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
