--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .father {
+  /* Layout */
   display: flex;
+  justify-content: space-around;
+  /* Design */
   height: 100vh;
 }
 
@@ -8,16 +16,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-basis: 30%;
   flex-grow: 1;
   /* Design */
-  height: 100px;
+  height: 30%;
   background: peru;
   color: aliceblue;
   font-size: 50px;
 }
 
 .child:nth-child(2) {
-  flex-shrink: 3;
-  flex-grow: 3;
   background-color: black;
 }
