--- a/style.css
+++ b/style.css
@@ -3,25 +3,42 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.father {
+.grid {
   /* Layout */
   display: grid;
-  grid-template-columns: 80px 100px 120px;
-  grid-template-rows: 80px 120px;
-  gap: 10px;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(4, 150px);
+  grid-template-areas:
+    "header header header header"
+    "content content content nav"
+    "content content content nav"
+    "footer footer footer footer";
 }
 
-.child {
+.header {
+  /* Default */
+  grid-area: header;
   /* Design */
-  background: peru;
-  color: white;
-  font-size: 50px;
-  /* Layout */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: fuchsia;
 }
 
-.child:nth-child(2n) {
-  background: black;
+.content {
+  /* Default */
+  grid-area: content;
+  /* Design */
+  background-color: chocolate;
+}
+
+.nav {
+  /* Default */
+  grid-area: nav;
+  /* Design */
+  background-color: crimson;
+}
+
+.footer {
+  /* Default */
+  grid-area: footer;
+  /* Design */
+  background-color: cyan;
 }
