--- a/style.css
+++ b/style.css
@@ -6,39 +6,33 @@ body {
 .grid {
   /* Layout */
   display: grid;
-  grid-template-columns: repeat(4, 100px);
+  grid-template-columns: [first] 100px [second] 100px [third] 100px [fourth] 100px [last];
   grid-template-rows: repeat(4, 100px);
   gap: 10px;
 }
 
 .header {
-  /* Shortcuts #1 : slash */
-  grid-column: 1/-1;
+  grid-column: first/last;
   /* Design */
   background-color: fuchsia;
 }
 
 .content {
-  /* Shortcuts #2 : span */
-  grid-column: span 3;
+  grid-column: first/fourth;
   grid-row: span 2;
   /* Design */
   background-color: chocolate;
 }
 
 .nav {
-  /* Sucks Default */
-  grid-column-start: 4;
-  grid-column-end: 5;
-  grid-row-start: 2;
-  grid-row-end: 4;
+  grid-column: -2 / last;
+  grid-row: span 2;
   /* Design */
   background-color: crimson;
 }
 
 .footer {
-  /* Use Case by Case! */
-  grid-column: span 4;
+  grid-column: first/last;
   /* Design */
   background-color: cyan;
 }
