--- a/style.css
+++ b/style.css
@@ -1,38 +1,44 @@
+@import "./reset.css";
+
 body {
+  /* Default Design */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 100vh;
 }
 
 .grid {
+  /* Design */
+  height: 100%;
   /* Layout */
   display: grid;
-  grid-template-columns: [first] 100px [second] 100px [third] 100px [fourth] 100px [last];
-  grid-template-rows: repeat(4, 100px);
-  gap: 10px;
+  grid-template:
+    "header header header header" 1fr
+    "content content content nav" 2fr
+    "footer footer footer footer" 1fr
+    /1fr 1fr 1fr 1fr;
 }
 
 .header {
-  grid-column: first/last;
+  grid-area: header;
   /* Design */
   background-color: fuchsia;
 }
 
 .content {
-  grid-column: first/fourth;
-  grid-row: span 2;
+  grid-area: content;
   /* Design */
   background-color: chocolate;
 }
 
 .nav {
-  grid-column: -2 / last;
-  grid-row: span 2;
+  grid-area: nav;
   /* Design */
   background-color: crimson;
 }
 
 .footer {
-  grid-column: first/last;
+  grid-area: footer;
   /* Design */
   background-color: cyan;
 }
