--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import "./reset.css";
-
 body {
   /* Default Design */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -12,33 +10,28 @@ body {
   height: 100%;
   /* Layout */
   display: grid;
-  grid-template:
-    "header header header header" 1fr
-    "content content content nav" 2fr
-    "footer footer footer footer" 1fr
-    /1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  place-items: center center;
+  gap: 10px;
 }
 
 .header {
-  grid-area: header;
   /* Design */
   background-color: fuchsia;
 }
 
 .content {
-  grid-area: content;
   /* Design */
   background-color: chocolate;
 }
 
 .nav {
-  grid-area: nav;
   /* Design */
   background-color: crimson;
 }
 
 .footer {
-  grid-area: footer;
   /* Design */
   background-color: cyan;
 }
