--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@ body {
 .grid {
   /* Design */
   height: 100%;
+  background-color: black;
   /* Layout */
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  place-items: center center;
+  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: repeat(4, 100px);
+  place-content: center center;
   gap: 10px;
 }
 
