--- a/style.css
+++ b/style.css
@@ -8,18 +8,17 @@ body {
 .grid {
   /* Design */
   height: 100%;
-  background-color: black;
   /* Layout */
   display: grid;
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: repeat(4, 100px);
-  place-content: center center;
   gap: 10px;
 }
 
 .header {
   /* Design */
   background-color: fuchsia;
+  place-self: end center;
 }
 
 .content {
