--- a/style.css
+++ b/style.css
@@ -2,36 +2,22 @@ body {
   /* Default Design */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: 100vh;
 }
 
 .grid {
-  /* Design */
-  height: 100%;
   /* Layout */
   display: grid;
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: repeat(4, 100px);
+  grid-auto-columns: 100px;
+  grid-auto-flow: column;
   gap: 10px;
 }
 
-.header {
-  /* Design */
-  background-color: fuchsia;
-  place-self: end center;
+.item:nth-child(2n-1) {
+  background-color: cornflowerblue;
 }
 
-.content {
-  /* Design */
-  background-color: chocolate;
-}
-
-.nav {
-  /* Design */
-  background-color: crimson;
-}
-
-.footer {
-  /* Design */
-  background-color: cyan;
+.item:nth-child(2n) {
+  background-color: thistle;
 }
