--- a/style.css
+++ b/style.css
@@ -7,17 +7,22 @@ body {
 .grid {
   /* Layout */
   display: grid;
-  grid-template-columns: repeat(4, 100px);
   grid-template-rows: repeat(4, 100px);
-  grid-auto-columns: 100px;
-  grid-auto-flow: column;
   gap: 10px;
 }
 
-.item:nth-child(2n-1) {
+.grid:nth-child(1) {
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+}
+
+.grid:nth-child(2) {
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+.item:nth-child(odd) {
   background-color: cornflowerblue;
 }
 
-.item:nth-child(2n) {
+.item:nth-child(even) {
   background-color: thistle;
 }
